objects/Sellable_Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <description>This is populated from the payload of product in contract event</description>
        <externalId>true</externalId>
        <label>Building UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is filled with contract event in the pay of products that come for a deal update.</description>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Sellable Opportunity Products</relationshipLabel>
        <relationshipName>Sellable_Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>List price from pricebook entry</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>This field is used to map the opportunity to which the product is related</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sellable Opportunity Products</relationshipLabel>
        <relationshipName>Sellable_Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sellable Opportunity Products</relationshipLabel>
        <relationshipName>Sellable_Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity that comes in the payload for the product</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of product that comes in contract  event</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Is calculated by Quantity * Sales Price</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit price of the product</description>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>This object holds the products that are updated after a deal brings move-ins with it. All the other products that come with the deal product are moved in this object.</description>
    <label>Sellable Opportunity Product</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sellable Opportunity Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellable Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Lookup_is_required</fullName>
        <active>true</active>
        <description>Product lookup is required field</description>
        <errorConditionFormula>ISBLANK(Product_Code__c)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Product is Compulsory Field</errorMessage>
    </validationRules>
</CustomObject>